# NCXC

./: README.md  command_compile.txt  xc_functional_NCLibxc_gga.cpp  xc_functional_vxc.cpp
CUDA4NCLibxc/NCLibxc/: FibonacciGrid.h  LebedevGrid.cpp  NCLibxc.cpp  NCLibxc.h  benchmark_tests.cpp  gga.cpp  gga_cuda.cu  interface_to_libxc.cpp  lda.cpp  mgga.cpp  print.cpp  test_NCLibxc.cpp  torque.cpp
NCLibxc/: CMakeLists.txt  FibonacciGrid.cpp  FibonacciGrid.h  NCLibxc.cpp  NCLibxc.h  benchmark_tests.cpp  gga.cpp  gga_col.cpp  interface_to_libxc.cpp  interface_to_libxc.h  lda.cpp  math.cpp  mgga.cpp  print.cpp  test_NCLibxc.cpp  torque.cpp
test_NCLibxcso/: CMakeLists.txt  main.cpp
